# quizzo-v2

backend/: IMPLEMENTATION_SUMMARY.md  celerybeat-schedule.db  pyproject.toml  redis-quizzo.conf  run.py  test_email_features.py
backend/app/: __init__.py  cache.py  celery_app.py  certificate_generator.py  config.py  email_service.py  error_handlers.py  models.py  rate_limiter.py  utils.py
backend/app/api/: admin.py  auth.py  cache_admin.py  email.py  email_tasks.py  export.py  health.py  public.py  quiz.py  user.py
backend/app/services/: __init__.py  celery_manager.py  celery_tasks.py  email_service.py  report_generator.py
backend/instance/: quiz.db
backend/tests/email/: .env.example  demo_email_test.py  email_test_comprehensive.py  setup_email_config.sh
backend/tests/sample_db/: gen_questions.py  populate_db.py
backend/tests/sample_db/data/: artificial_intelligence_ml.json  deep_learning_course_actual_questions.json  generative_ai_course.json  intro_to_python_programming.json  intro_to_web_dev.json  mathematics_I_course.json  statistics_course.json
frontend/: package-lock.json
frontend/src/: App.vue  main.js
frontend/src/assets/: base.css  main.css
frontend/src/components/: CourseCard.vue  CourseModal.vue  DeleteConfirmationModal.vue  Footer.vue  Header.vue  QuizCard.vue  QuizQuestion.vue  QuizResult.vue  QuizSubmissionModal.vue  QuizTimeUpModal.vue  QuizTimer.vue  Toast.vue  footer.vue
frontend/src/layouts/: AuthLayout.vue  GeneralLayout.vue
frontend/src/pages/: AdminChapterPage.vue  AdminCourses.vue  AdminDashboard.vue  AdminQuizzes.vue  (+11 more)
(+12 files in other folders)
